Version 1.6.3
- CHG: Some small improvements to the status cache. (Stefan)
- BUG: If a commit failed, TSVN could crash in case the svn library returned
       an empty error object. (Stefan)
- BUG: The merge options to ignore whitespaces were ignored. (Stefan)

Version 1.6.2
- BUG: Error message about non-LF commit messages when using messages with
       non-ASCII text. (Stefan)
- BUG: Dragging files/folders from the repository browser or the status
       list control to the explorer could result in a DEP exception. (Stefan)
- BUG: The pathList passed to CheckCommit() only contained the parent folder
       for recursive commits, not all selected items. (Stefan)
- BUG: TortoiseMerge duplicated the last line when saving UCS-2 files. (Stefan)
- BUG: Using a commit message from the history could result in an error
       about "only numbers are allowed" when trying to commit. (Stefan)
- BUG: Stealing a lock failed when using serf instead of neon. (Stefan)
- BUG: Segfault in TSVNCache. (Stefan)
- BUG: The merge dialog always used the wc url as the default. (Stefan)
- BUG: The pathlist in the OnCommitFinished() method did not contain
       all committed paths. (Stefan)
- BUG: Copy-to-wc from the repository browser didn't work for single
       files/folders. (Stefan)
- BUG: Comparing revisions in the log dialog before a rename returned
       an error. (Stefan)
- BUG: The context menu in TortoiseBlame was shown on the wrong monitor
       in multi-monitor setups. (Stefan)
- BUG: Saving the revision graph as a wmf file when the stripes option
       was activated resulted in an invalid file. (Stefan)
- BUG: interactive merging of binary files always left the file conflicted,
       ignoring the "Use local" and/or "Use repository" buttons. (Stefan)
- BUG: TSVN didn't work on Win2k if it wasn't fully updated and
       IE6 installed. (Stefan)
- BUG: The options button in the settings dialog to add an IBugTraqProvider